@@ -26,26 +26,29 @@
 
 NIH_BEGIN_EXTERN
 
-char **       environ_add    (char ***env, const void *parent, size_t *len,
-			      int replace, const char *str)
+char **       environ_add       (char ***env, const void *parent, size_t *len,
+				 int replace, const char *str)
 	__attribute__ ((warn_unused_result));
-char **       environ_append (char ***env, const void *parent, size_t *len,
-			      int replace, char * const *new_env)
-	__attribute__ ((warn_unused_result));
-
-char **       environ_set    (char ***env, const void *parent, size_t *len,
-			      int replace, const char *format, ...)
+char **       environ_append    (char ***env, const void *parent, size_t *len,
+				 int replace, char * const *new_env)
 	__attribute__ ((warn_unused_result));
 
-char * const *environ_lookup (char * const *env, const char *key, size_t len);
+char **       environ_set       (char ***env, const void *parent, size_t *len,
+				 int replace, const char *format, ...)
+	__attribute__ ((warn_unused_result));
 
-const char *  environ_get    (char * const *env, const char *key);
-const char *  environ_getn   (char * const *env, const char *key, size_t len);
+char * const *environ_lookup    (char * const *env, const char *key,
+				 size_t len);
 
-int           environ_valid  (const char *key, size_t len);
+const char *  environ_get       (char * const *env, const char *key);
+const char *  environ_getn      (char * const *env, const char *key,
+				 size_t len);
 
-char *        environ_expand (const void *parent, const char *string,
-			      char * const *env)
+int           environ_valid     (const char *key, size_t len);
+int           environ_all_valid (char * const *env);
+
+char *        environ_expand    (const void *parent, const char *string,
+				 char * const *env)
 	__attribute__ ((malloc, warn_unused_result));
 
 NIH_END_EXTERN
